dark mode fixed

--- a/src/index.css
+++ b/src/index.css
@@ -3,15 +3,15 @@
 
 /* In your global CSS */
 select {
-    @apply bg-white dark:bg-gray-800 dark:text-gray-200 rounded-lg px-2 py-1;
+    @apply bg-base-100;
 }
 
 select option {
-    @apply bg-white dark:bg-gray-800 text-gray-950 dark:text-gray-200;
+    @apply bg-base-200
 }
 
 label {
-    @apply text-gray-600 dark:text-gray-400;
+    @apply text-base-content;
 }
 
 .bg-img {
